cache-proxy/k8s/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cache-proxy
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`edgecache.gladeos.net`)
      kind: Rule
      services:
        - name: cache-proxy
          port: 4181
      middlewares:
        - name: default-headers
  tls:
    secretName: gladeos-net-tls #production
